--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+    <title>Context API</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
